<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WMFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9"
        />
    <TextView
        android:id="@+id/wmLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/topGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintBottom_toBottomOf="@id/topGuide"
        android:text="@string/txt_whatsapp"
        android:textSize="18sp"
        android:textColor="@color/colorFont"
        android:fontFamily="sans-serif-medium"
        />
    <EditText
        android:id="@+id/input_number"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/wmLayout"
        android:layout_marginTop="40dp"
        android:hint="@string/txt_number"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/custome_background_input"
        android:inputType="number"
        android:autofillHints="@string/dummy_name"
        />
    <EditText
        android:id="@+id/input_message"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/input_number"
        android:layout_marginTop="20dp"
        android:hint="@string/txt_message"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/custome_background_input"
        android:inputType="text"
        android:autofillHints="@string/dummy_age"
        />

    <Button
        android:id="@+id/btn_wm"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/input_message"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        android:layout_marginTop="40dp"
        android:background="@drawable/custome_background_button"
        android:text="@string/btn_send"
        android:textColor="@color/colorBackground"
        />

<!--    <com.hbb20.CountryCodePicker-->
<!--        android:id="@+id/countryCodePicker"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintStart_toStartOf="@id/startGuide"-->
<!--        app:layout_constraintEnd_toEndOf="@id/endGuide"-->
<!--        app:layout_constraintTop_toBottomOf="@id/btn_wm"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        />-->

</androidx.constraintlayout.widget.ConstraintLayout>