<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ParcelableFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9"
        />
    <TextView
        android:id="@+id/parcelLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/topGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintBottom_toBottomOf="@id/topGuide"
        android:text="@string/btn_parcel"
        android:textSize="18sp"
        android:textColor="@color/colorFont"
        android:fontFamily="sans-serif-medium"
        />
    <EditText
        android:id="@+id/input_name_parcel"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/parcelLayout"
        android:layout_marginTop="40dp"
        android:hint="@string/txt_hint_name"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/custome_background_input"
        android:inputType="text"
        android:autofillHints="@string/dummy_name"
        />
    <EditText
        android:id="@+id/input_age_parcel"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/input_name_parcel"
        android:layout_marginTop="20dp"
        android:hint="@string/txt_hint_age"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/custome_background_input"
        android:inputType="number"
        android:autofillHints="@string/dummy_age"
        />

    <Button
        android:id="@+id/btn_parcel"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/input_age_parcel"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        android:layout_marginTop="40dp"
        android:background="@drawable/custome_background_button"
        android:text="@string/btn_parcel"
        android:textColor="@color/colorBackground"
        />

</androidx.constraintlayout.widget.ConstraintLayout>