<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetLayout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9"
        />
    <TextView
        android:id="@+id/intentTexting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/topGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintBottom_toBottomOf="@id/topGuide"
        android:text="@string/settexting"
        android:textSize="18sp"
        android:textColor="@color/colorFont"
        android:fontFamily="sans-serif-medium"
        />
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/intentTexting"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toStartOf="@id/value_name"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:text="@string/txt_name"
        />
    <TextView
        android:id="@+id/value_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/intentTexting"
        app:layout_constraintStart_toEndOf="@id/txt_name"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        android:layout_marginTop="50dp"
        android:text="@string/txt_name"
        />
    <TextView
        android:id="@+id/txt_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintEnd_toStartOf="@id/value_age"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:text="@string/txt_age"
        />
    <TextView
        android:id="@+id/value_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/value_name"
        app:layout_constraintStart_toEndOf="@id/txt_age"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        android:layout_marginTop="50dp"
        android:text="@string/txt_name"
        />

</androidx.constraintlayout.widget.ConstraintLayout>